fixed a few details

--- a/accessory/convert_oldlog_to_newformat.ipynb
+++ b/accessory/convert_oldlog_to_newformat.ipynb
@@ -197,8 +197,8 @@
     "dfnew[\"Irregular heartbeat detected\"] = \" \"\n",
     "dfnew[\"Body Movement\"] = \" \"\n",
     "dfnew[\"Cuff wrap guide\"] = \" \"\n",
-    "dfnew[\"Positioning indicator\"] = \" \"\n",
-    "dfnew[\"Measurement mode\"] = \" \"\n",
+    "dfnew[\"Positioning Indicator\"] = \" \"\n",
+    "dfnew[\"Measurement Mode\"] = \" \"\n",
     "dfnew[\"Possible Afib\"] = \" \"\n",
     "dfnew[\"Device\"] = df[\"Device Model Name\"] # from old dataframe\n",
     "dfnew[\"Notes\"] = \"_\""
